[project]
name = "2026-personal-policescout"
version = "0.1.0"
description = "Automated daily police press release digest"
requires-python = ">=3.12"
dependencies = [
    "beautifulsoup4>=4.14.3",
    "curl-cffi>=0.15.0",
    "jinja2>=3.1.6",
    "playwright>=1.60.0",
    "playwright-stealth>=2.0.3",
    "requests>=2.32.5",
]

[dependency-groups]
dev = [
    "pytest>=8.0",
]
